[package]
name = "appkeeper"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "8.2"
thiserror = "2"

[workspace.lints.clippy]
all = "deny"
redundant-clone = "deny"
bind_instead_of_map = "deny"
bool_assert_comparison = "deny"
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
explicit_into_iter_loop = "deny"
implicit_clone = "deny"
inefficient_to_string = "deny"
manual_instant_elapsed = "deny"
manual_is_variant_and = "deny"
manual_string_new = "deny"
match_bool = "deny"
needless_for_each = "deny"
needless_raw_string_hashes = "deny"
needless_raw_strings = "deny"
non_std_lazy_statics = "deny"
option_as_ref_cloned = "deny"
precedence_bits = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
ref_binding_to_reference = "deny"
return_and_then = "deny"
unseparated_literal_suffix = "deny"
suspicious_operation_groupings = "deny"
trait_duplication_in_bounds = "deny"
unchecked_time_subtraction = "deny"
unnecessary_join = "deny"
unnecessary_struct_initialization = "deny"
unnested_or_patterns = "deny"
use_self = "deny"
